Revert "V1.2 add on: Fix font and symbols on mobile"
This reverts commit edbc30f6d5dd9b5374039268b65df8a105a505b2.

--- a/assets/style.css
+++ b/assets/style.css
@@ -10,8 +10,6 @@
 
 /* ----- VARIABLES ----- */
 :root {
-
-    font-family:'Times New Roman', Times, serif;
     --normalFontSize: 24px;
   
     --bgColor: #fef6ec;
@@ -574,6 +572,7 @@ button.prev:hover, button.next:hover {
     color: inherit;
     border-radius: 10px;
 }
+
 
 .contactDark:Hover{
     color: #e6ccb2;
